syntax = "proto3";

option csharp_namespace = "Discount.API.Protos";

service CouponGrpcService {
  rpc List (ListCouponRequest) returns (ListCouponModel);
  rpc Get (GetCouponRequest) returns (CouponModel);
  rpc Create (CreateCouponRequest) returns (CouponModel);
  rpc Update (UpdateCouponRequest) returns (CouponModel);
  rpc Delete (DeleteCouponRequest) returns (DeleteCouponResponse);
}

// requests
message ListCouponRequest { }

message GetCouponRequest {
  string productName = 1;
}

message CreateCouponRequest {
  CouponModel coupon = 1;
}

message UpdateCouponRequest {
  CouponModel coupon = 1;
}

message DeleteCouponRequest {
  string id = 1;
}

// responses
message CouponModel {
  string id = 1;
  string productName = 2;
  string description = 3;
  int32 amount = 4;
}

message ListCouponModel {
  repeated CouponModel couponModel = 1;
}

message DeleteCouponResponse {
  bool success = 1;
}